--- a/frontend/pages/exercises/list/index.wxml
+++ b/frontend/pages/exercises/list/index.wxml
@@ -9,13 +9,13 @@
   <view class="main-container">
     <!-- 页面头部 -->
     <view class="section-title">
-      <text>Exercises</text>
+      <text>动作库</text>
       <view class="toolbar-right">
         <view class="button icon-button" bindtap="handleRefresh">
           <text>🔄</text>
         </view>
         <view class="button primary" bindtap="navigateToCreate">
-          <text class="button-text">+ Create</text>
+          <text class="button-text">+ 新建</text>
         </view>
       </view>
     </view>
@@ -25,25 +25,25 @@
       <block wx:if="{{loading}}">
         <view class="loading">
           <view class="loading-spinner"></view>
-          <text>Loading...</text>
+          <text>加载中...</text>
         </view>
       </block>
       <block wx:elif="{{exercises.length === 0}}">
         <view class="empty">
           <text class="empty-icon">💪</text>
-          <text class="empty-text">No exercises yet</text>
-          <text class="empty-subtext">Create your first exercise to get started</text>
+          <text class="empty-text">暂无动作</text>
+          <text class="empty-subtext">创建第一个动作开始使用</text>
           <view class="button primary" bindtap="navigateToCreate">
-            <text class="button-text">Create First Exercise</text>
+            <text class="button-text">新建首个动作</text>
           </view>
         </view>
       </block>
       <block wx:else>
         <view class="table-header">
-          <view class="table-header-cell">Exercise</view>
-          <view class="table-header-cell">Muscles</view>
-          <view class="table-header-cell">Description</view>
-          <view class="table-header-cell" style="text-align: right;">Actions</view>
+          <view class="table-header-cell">动作</view>
+          <view class="table-header-cell">肌肉</view>
+          <view class="table-header-cell">描述</view>
+          <view class="table-header-cell" style="text-align: right;">操作</view>
         </view>
         <view class="table-body">
           <view wx:for="{{exercises}}" wx:key="{{item.id}}" class="table-row">
@@ -54,7 +54,7 @@
               <text class="exercise-muscles">{{getMusclesList(item)}}</text>
             </view>
             <view class="table-cell">
-              <text class="exercise-description">{{item.description || 'No description'}}</text>
+              <text class="exercise-description">{{item.description || '暂无描述'}}</text>
             </view>
             <view class="table-cell" style="text-align: right;">
               <view class="table-actions">
