--- a/frontend/pages/profile/index.wxml
+++ b/frontend/pages/profile/index.wxml
@@ -1,10 +1,4 @@
 <view class="page-container">
-  <!-- 顶部导航栏 -->
-  <navbar 
-    menuOpen="{{menuOpen}}" 
-    bind:toggleMenu="handleMenuToggle"
-  />
-  
   <view class="container">
     <view class="profile-header">
       <view class="avatar">{{user && user.username ? user.username.charAt(0).toUpperCase() : 'U'}}</view>
@@ -13,15 +7,13 @@
 
     <view class="menu-list">
       <view class="menu-item" bindtap="navigateToSettings">
-        <text class="menu-icon">⚙️</text>
         <text class="menu-text">设置</text>
-        <text class="menu-arrow">›</text>
+        <text class="menu-arrow">></text>
       </view>
 
       <view class="menu-item" bindtap="handleLogout">
-        <text class="menu-icon">🚪</text>
         <text class="menu-text">退出登录</text>
-        <text class="menu-arrow">›</text>
+        <text class="menu-arrow">></text>
       </view>
     </view>
   </view>
